Server static files as part of Go binary
