# doc/swagger/simple_bank.swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Simple Bank API",
-    "version": "1.0",
+    "version": "1.1",
     "contact": {
       "name": "Personal Project",
       "url": "https://github.com/go-backend-development",
@@ -28,6 +28,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
+        "summary": "Create new User",
+        "description": "This API creates a new user using gRPC",
         "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
@@ -54,12 +56,14 @@
           }
         ],
         "tags": [
-          "SimpleBank"
+          "create_user"
         ]
       }
     },
     "/v1/login_user": {
       "post": {
+        "summary": "Login User",
+        "description": "Fuck a user using gRPC",
         "operationId": "SimpleBank_LoginUser",
         "responses": {
           "200": {
@@ -86,7 +90,7 @@
           }
         ],
         "tags": [
-          "SimpleBank"
+          "login_user"
         ]
       }
     }
